# demo-day

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml
ansible/: ansible.cfg  inventory.ini  playbook.yml
src/app/: main.py
terraform/: ec2.tf  key_pair.tf  main.tf  security-group.tf  variables.tf
tests/: test_health.py
